# 16th-Diswork

./: .env.sample  .gitignore  Makefile  Procfile  README.md  build.js  news_spider.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  test.html  token.json
ads/: context_processors.py  forms.py  models.py  urls.py  views.py
ads/migrations/: 0001_initial.py  0002_alter_ads_title.py
articles/: forms.py  models.py  rules.py  tests.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0002_article_label.py  0002_article_member.py  0003_rename_member_article_category.py  0004_alter_article_content.py  0005_article_picture.py  0006_alter_article_picture.py
boards/: forms.py  models.py  rules.py  urls.py  views.py
boards/migrations/: 0001_initial.py  0002_alter_category_managers.py  0003_category_picture.py  0004_alter_category_picture.py  0005_category_member.py  0006_alter_category_managers.py
chats/: consumers.py  forms.py  models.py  routing.py  urls.py  views.py
chats/migrations/: 0001_initial.py  0002_alter_groupmessage_options.py  0002_initial.py  0003_alter_privatemessage_options.py  0003_privatemessage.py
comments/: forms.py  models.py  rules.py  urls.py  views.py
comments/migrations/: 0001_initial.py  0002_rename_like_sender_likecomment_like_by.py  0003_comment_article.py  0004_alter_comment_article.py
events/: forms.py  models.py  token.json  urls.py  utils.py  views.py
events/migrations/: 0001_initial.py  0002_rename_my_event_event.py  0002_rename_myevent_my_event.py  0003_event_category.py  0003_my_event_created_at.py  (+3 more)
friends/: forms.py  models.py  rules.py  urls.py  views.py
lib/: paginate_que.py  softdelete.py  utils.py
members/: admin.py  forms.py  models.py  rules.py  urls.py  views.py
news/: forms.py  models.py  news_reptile.py  urls.py  views.py
news_app/: models.py  news_reptile.py  urls.py  views.py
notifications/: context_processors.py  models.py  signals.py  urls.py  views.py
paies/: apps.py  models.py  urls.py  views.py
project/: asgi.py  settings.py  urls.py  views.py
styles/: style.css
tasks/: models.py  urls.py  views.py
templates/: 403.html  404.html  index.html  news.html
(+111 files in other folders)
