[tool.poetry]
name = "diswork"
version = "0.1.0"
description = ""
authors = ["chiehhhaa <tomato870208@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.4"
mysqlclient = "^2.2.4"
python-dotenv = "^1.0.1"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
selenium = "^4.20.0"
webdriver-manager = "^4.0.1"
python-dotenv = "^1.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
